# MCP-Server-Blockchain-Address-Scanner

./: .env.example  Makefile  README.md  claude_desktop_config.json  pyproject.toml  requirements.txt  setup.py
src/core/: main.py  whale_detector.py
src/mcp_etherscan_server/: __init__.py  etherscan_service.py  server.py
